--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<!-- Add Contact Info Here -->
 						<div class="contact-info">
 							<p><strong>GitHub:</strong> <a href="https://github.com/ty3340" target="_blank">ty3340 (Vuthtyra (Teera) Yong)</a> |
-							<strong>Email:</strong> <a href="mailto:vuyong@syr.edu">vuyong@syr.edu</a> |
-							<strong>LinkedIn:</strong> <a href="https://ww" target="_blank">Vuthtyra Yong</a></p>
+							<strong>Email:</strong> <a href="mailto:vuthtyrayong@gmail.com">vuthtyrayong@gmail.com</a> |
+							<strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vuyong" target="_blank">Vuthtyra Yong</a></p>
 						</div>
 					</nav>
 
@@ -66,7 +66,7 @@
 
 										</p>
 										<ul class="actions">
-											<li><a href="#" class="button">Download Resume </a></li>
+											<li><a href="assets/VYong_Resume.pdf" class="button" download>Download Resume</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic07.jpg" alt="" /></span>
@@ -96,7 +96,7 @@
 									
 										<span class="icon major style3"><img src="images/pic12.jpg" alt="Feature Icon"></span>
 										<h3>Airbnb Fraud Detection</h3>
-										<p>This project aims to develop and deplot an Airbnb fraud detection program using a Feed-Forward Neural Network (FNN) trained on the Boston Airbnb Fraud Detection dataset. 
+										<p>This project aims to develop and deploy an Airbnb fraud detection program using a Feed-Forward Neural Network (FNN) trained on the Boston Airbnb Fraud Detection dataset. 
 											For scalability and deployment, we use Docker, Kubernetes, and Azure Cloud, ensuring reliable fraud detection with deep learning and cloud computing.</p>
 										<div class="spacer"></div>
 									</a>
