--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</ul>
 						<!-- Add Contact Info Here -->
 						<div class="contact-info">
-							<p><strong>GitHub:</strong> <a href="https://github.com/ty3340" target="_blank">ty3340 (Vuthtyra (Teera) Yong)</a> |
+							<p><strong>GitHub:</strong> <a href="https://github.com/ty3340" target="_blank">ty3340 Vuthtyra (Teera) Yong</a> |
 							<strong>Email:</strong> <a href="mailto:vuthtyrayong@gmail.com">vuthtyrayong@gmail.com</a> |
 							<strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vuyong" target="_blank">Vuthtyra Yong</a></p>
 						</div>
@@ -190,11 +190,12 @@
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Email</dt>
-								<dd><a href="#">vuyong@syr.edu</a></dd>
+							
+								<p><strong>Email:</strong> <a href="mailto:vuthtyrayong@gmail.com">vuthtyrayong@gmail.com</a></p>
+								
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.linkedin.com/in/vuyong" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Twitter</span></a></li>
 								<li><a href="https://github.com/ty3340" target= "_blank"class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
